--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -66,7 +66,7 @@ required = [
 
 [[override]]
   name = "github.com/cloudevents/sdk-go"
-  version = "v2.0.0-preview7"
+  version = "v2.0.0-prevew7"
 
 [prune]
   go-tests = true
