--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -66,6 +66,7 @@ required = [
 
 [[override]]
   name = "github.com/cloudevents/sdk-go"
+  # prevew7 has a typo. NVM we will update again soon.
   version = "v2.0.0-prevew7"
 
 [prune]
