--- a/pkg/reconciler/brokercell/testingdata/retry_deployment.yaml
+++ b/pkg/reconciler/brokercell/testingdata/retry_deployment.yaml
@@ -40,6 +40,16 @@ spec:
       containers:
       - name: retry
         image: retry
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /healthz
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 15
+          periodSeconds: 15
+          successThreshold: 1
+          timeoutSeconds: 1
         env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /var/secrets/google/key.json        
