--- a/config/config-gcp-auth.yaml
+++ b/config/config-gcp-auth.yaml
@@ -15,7 +15,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: config-authorization
+  name: config-gcp-auth
   namespace: cloud-run-events
   labels:
     events.cloud.google.com/release: devel
