--- a/config/core/deployments/controller.yaml
+++ b/config/core/deployments/controller.yaml
@@ -64,6 +64,8 @@ spec:
           value: ko://github.com/google/knative-gcp/cmd/broker/fanout
         - name: BROKER_CELL_RETRY_IMAGE
           value: ko://github.com/google/knative-gcp/cmd/broker/retry
+        - name: PORT
+          value: "8080"
         volumeMounts:
         - name: google-cloud-key
           mountPath: /var/secrets/google
@@ -77,6 +79,8 @@ spec:
             cpu: 100m
             memory: 100Mi
         ports:
+        - name: grpc
+          containerPort: 8080
         - name: metrics
           containerPort: 9090
       volumes:
