--- a/config/core/services/controller.yaml
+++ b/config/core/services/controller.yaml
@@ -28,3 +28,22 @@ spec:
       port: 9090
       protocol: TCP
       targetPort: 9090
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: broker-control
+  namespace: cloud-run-events
+  labels:
+    events.cloud.google.com/release: devel
+    app: cloud-run-events-controller
+spec:
+  selector:
+    app: cloud-run-events
+    role: controller
+  clusterIP: None
+  ports:
+    - name: grpc
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
